tests/assembler/fail/test8.ial
type automatic BrokenTypeSyntax
{
    field instance int32*. foo;
}
